--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "to-integer-x",
-  "version": "1.0.6",
+  "version": "1.1.0",
   "description": "toInteger module.",
   "homepage": "https://github.com/Xotic750/to-integer-x",
   "author": {
@@ -29,23 +29,28 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "es5-shim": "^4.5.4",
-    "es6-shim": "^0.34.4",
-    "json3": "^3.3.2",
-    "jscs": "^2.9.0",
-    "uglify-js": "^2.6.1",
-    "browserify": "^13.0.0",
+    "@ljharb/eslint-config": "^11.0.0",
+    "browserify": "^14.1.0",
     "browserify-derequire": "^0.9.4",
+    "es5-shim": "^4.5.9",
+    "es6-shim": "^0.35.3",
+    "es7-shim": "^6.0.0",
+    "eslint": "^3.15.0",
+    "eslint-plugin-import": "^2.2.0",
     "jasmine-node": "^1.14.5",
-    "jsdoc-to-markdown": "^1.3.3",
-    "nsp": "^2.2.0"
+    "jscs": "^3.0.7",
+    "jsdoc-to-markdown": "^3.0.0",
+    "json3": "^3.3.2",
+    "nsp": "^2.6.2",
+    "uglify-js": "^2.7.5"
   },
   "scripts": {
     "test": "jasmine-node --matchall tests/spec/",
     "security": "nsp check",
     "style": "jscs index.js",
+    "eslint": "eslint *.js tests/spec/*.js",
     "docs": "jsdoc2md --name-format --example-lang js index.js > README.md",
-    "build": "browserify -p browserify-derequire -e index.js -o lib/to-integer-x.js -u 'crypto' -s returnExports",
+    "build": "browserify -p browserify-derequire -e index.js -o lib/to-integer-x.js -u 'crypto' -s toInteger",
     "build-uglify": "uglifyjs lib/to-integer-x.js -o lib/to-integer-x.min.js --compress --keep-fnames --mangle --beautify ascii_only=true,beautify=false --source-map lib/to-integer-x.map"
   }
 }
