--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "to-integer-x",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "toInteger module.",
   "homepage": "https://github.com/Xotic750/to-integer-x",
   "author": {
@@ -50,7 +50,7 @@
     "style": "jscs index.js",
     "eslint": "eslint *.js tests/spec/*.js",
     "docs": "jsdoc2md --name-format --example-lang js index.js > README.md",
-    "build": "browserify -p browserify-derequire -e index.js -o lib/to-integer-x.js -u 'crypto' -s toInteger",
+    "build": "browserify -p browserify-derequire -e index.js -o lib/to-integer-x.js -u 'crypto' -s returnExports",
     "build-uglify": "uglifyjs lib/to-integer-x.js -o lib/to-integer-x.min.js --compress --keep-fnames --mangle --beautify ascii_only=true,beautify=false --source-map lib/to-integer-x.map"
   }
 }
