--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "to-integer-x",
-  "version": "1.1.1",
-  "description": "toInteger module.",
+  "version": "1.1.2",
+  "description": "toInteger converts 'argument' to an integral numeric value.",
   "homepage": "https://github.com/Xotic750/to-integer-x",
   "author": {
     "name": "Graham Fairweather",
@@ -27,7 +27,11 @@
   "bugs": {
     "url": "https://github.com/Xotic750/to-integer-x/issues"
   },
-  "dependencies": {},
+  "dependencies": {
+    "is-finite-x": "^1.0.0",
+    "is-nan": "^1.2.1",
+    "math-sign-x": "^1.0.0"
+  },
   "devDependencies": {
     "@ljharb/eslint-config": "^11.0.0",
     "browserify": "^14.1.0",
@@ -35,22 +39,28 @@
     "es5-shim": "^4.5.9",
     "es6-shim": "^0.35.3",
     "es7-shim": "^6.0.0",
-    "eslint": "^3.15.0",
+    "eslint": "^3.18.0",
     "eslint-plugin-import": "^2.2.0",
     "jasmine-node": "^1.14.5",
-    "jscs": "^3.0.7",
     "jsdoc-to-markdown": "^3.0.0",
     "json3": "^3.3.2",
-    "nsp": "^2.6.2",
-    "uglify-js": "^2.7.5"
+    "make-jasmine-spec-runner-html": "^1.0.4",
+    "nodemon": "^1.11.0",
+    "nsp": "^2.6.3",
+    "replace-x": "^1.0.0",
+    "uglify-js": "^2.8.16"
   },
   "scripts": {
-    "test": "jasmine-node --matchall tests/spec/",
-    "security": "nsp check",
-    "style": "jscs index.js",
-    "eslint": "eslint *.js tests/spec/*.js",
+    "build": "npm run build:setver && npm run security && npm run eslint && npm run broswerify && npm run uglify && npm run docs && npm run build:jasmine && npm test",
+    "build:jasmine": "make-jasmine-spec-runner-html",
+    "build:setver": "PKG_VER=$(node -p -e \"require('./package.json').version\") && replace-x \" @version .*\" \" @version ${PKG_VER}\" index.js",
+    "build:watch": "nodemon --watch index.js --watch package.json --exec 'npm run build'",
     "docs": "jsdoc2md --name-format --example-lang js index.js > README.md",
-    "build": "browserify -p browserify-derequire -e index.js -o lib/to-integer-x.js -u 'crypto' -s returnExports",
-    "build-uglify": "uglifyjs lib/to-integer-x.js -o lib/to-integer-x.min.js --compress --keep-fnames --mangle --beautify ascii_only=true,beautify=false --source-map lib/to-integer-x.map"
+    "eslint": "eslint *.js tests/spec/*.js",
+    "security": "nsp check",
+    "test": "jasmine-node --matchall tests/spec/",
+    "test:watch": "nodemon --watch tests/spec/test.js --exec 'npm test'",
+    "broswerify": "browserify -p browserify-derequire -e index.js -o lib/to-integer-x.js -u 'crypto' -s returnExports",
+    "uglify": "uglifyjs lib/to-integer-x.js -o lib/to-integer-x.min.js --compress --keep-fnames --mangle --beautify ascii_only=true,beautify=false --source-map lib/to-integer-x.map"
   }
 }
