--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "to-integer-x",
-  "version": "1.1.3",
-  "description": "toInteger converts 'argument' to an integral numeric value.",
+  "version": "1.2.0",
+  "description": "ToInteger converts 'argument' to an integral numeric value.",
   "homepage": "https://github.com/Xotic750/to-integer-x",
   "author": {
     "name": "Graham Fairweather",
     "email": "xotic750@gmail.com"
   },
-  "copyright": "Copyright (c) 2015-2016",
+  "copyright": "Copyright (c) 2015-2017",
   "keywords": [
     "toInteger",
     "module",
@@ -28,9 +28,9 @@
     "url": "https://github.com/Xotic750/to-integer-x/issues"
   },
   "dependencies": {
-    "is-finite-x": "^1.0.0",
+    "is-finite-x": "^1.1.0",
     "is-nan": "^1.2.1",
-    "math-sign-x": "^1.0.0"
+    "math-sign-x": "^1.1.0"
   },
   "devDependencies": {
     "@ljharb/eslint-config": "^11.0.0",
@@ -44,14 +44,14 @@
     "jasmine-node": "^1.14.5",
     "jsdoc-to-markdown": "^3.0.0",
     "json3": "^3.3.2",
-    "make-jasmine-spec-runner-html": "^1.0.4",
+    "make-jasmine-spec-runner-html": "^1.1.0",
     "nodemon": "^1.11.0",
     "nsp": "^2.6.3",
-    "replace-x": "^1.0.0",
+    "replace-x": "^1.1.1",
     "uglify-js": "^2.8.16"
   },
   "scripts": {
-    "build": "npm run build:setver && npm run security && npm run eslint && npm run broswerify && npm run uglify && npm run docs && npm run build:jasmine && npm test",
+    "build": "npm run build:setver && npm run security && npm run eslint && npm run browserify && npm run uglify && npm run docs && npm run build:jasmine && npm test",
     "build:jasmine": "make-jasmine-spec-runner-html",
     "build:setver": "PKG_VER=$(node -p -e \"require('./package.json').version\") && replace-x \" @version .*\" \" @version ${PKG_VER}\" index.js",
     "build:watch": "nodemon --watch index.js --watch package.json --exec 'npm run build'",
@@ -60,7 +60,7 @@
     "security": "nsp check",
     "test": "jasmine-node --matchall tests/spec/",
     "test:watch": "nodemon --watch tests/spec/test.js --exec 'npm test'",
-    "broswerify": "browserify -p browserify-derequire -e index.js -o lib/to-integer-x.js -u 'crypto' -s returnExports",
+    "browserify": "browserify -p browserify-derequire -e index.js -o lib/to-integer-x.js -u 'crypto' -s returnExports",
     "uglify": "uglifyjs lib/to-integer-x.js -o lib/to-integer-x.min.js --compress --keep-fnames --mangle --beautify ascii_only=true,beautify=false --source-map lib/to-integer-x.map"
   }
 }
