--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "to-integer-x",
-  "version": "1.4.0",
+  "version": "2.0.0",
   "description": "ToInteger converts 'argument' to an integral numeric value.",
   "homepage": "https://github.com/Xotic750/to-integer-x",
   "author": {
@@ -28,9 +28,10 @@
     "url": "https://github.com/Xotic750/to-integer-x/issues"
   },
   "dependencies": {
-    "is-finite-x": "^1.3.0",
+    "is-finite-x": "^2.0.0",
     "is-nan": "^1.2.1",
-    "math-sign-x": "^1.3.0"
+    "math-sign-x": "^2.0.0",
+    "to-number-x": "^1.0.0"
   },
   "devDependencies": {
     "@xotic750/eslint-config-standard-x": "^2.2.1",
