--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "to-integer-x",
-  "version": "4.0.21",
+  "version": "4.0.22",
   "description": "ToInteger converts 'argument' to an integral numeric value.",
   "homepage": "https://github.com/Xotic750/to-integer-x",
   "author": {
@@ -21,6 +21,7 @@
   ],
   "module": "dist/to-integer-x.esm.js",
   "main": "dist/to-integer-x.js",
+  "jsdelivr": "dist/to-integer-x.min.js",
   "scripts": {
     "build:esm": "mkdirp dist && babel -s true --env-name esm src/to-integer-x.js -o dist/to-integer-x.esm.js",
     "build:base": "webpack --bail --progress --profile --colors",
@@ -48,10 +49,10 @@
     "url": "https://github.com/Xotic750/to-integer-x/issues"
   },
   "dependencies": {
-    "is-finite-x": "^4.0.19",
-    "is-nan-x": "^2.0.22",
-    "math-sign-x": "^4.0.22",
-    "to-number-x": "^3.0.21"
+    "is-finite-x": "^4.0.20",
+    "is-nan-x": "^2.0.23",
+    "math-sign-x": "^4.0.23",
+    "to-number-x": "^3.0.22"
   },
   "devDependencies": {
     "@babel/cli": "^7.5.5",
